--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/xacro
-	previous = 
-	base = 6bdc076
+	previous = 6bdc076
+	base = 4966acf
 	trim = 
 	trimbase = 
